defaults/conntrack.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: conntrack-printer
  namespace: kube-system
  labels:
    app: conntrack-printer
    k8s-app: conntrack-printer
spec:
  selector:
    matchLabels:
      app: conntrack-printer
  template:
    metadata:
      labels:
        app: conntrack-printer
    spec:
      tolerations:
        - key: "node.kubernetes.io/unschedulable"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "network-load"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - args:
            - -c
            - "nsenter --mount=/proc/1/ns/mnt -- bash -c ' while true; do echo $(date +%Y-%m-%dT%H:%M:%S) $(hostname) nf_conntrack_max: $(cat /proc/sys/net/netfilter/nf_conntrack_max) - nf_conntrack_count: $(cat /proc/sys/net/netfilter/nf_conntrack_count); sleep 5; done'"
          command:
            - /bin/sh
          image: acnpublic.azurecr.io/toolbox:latest
          imagePullPolicy: Always
          name: list-conntrack
          resources: {}
          securityContext:
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      hostNetwork: true
      hostPID: true
      #      initContainers:
      #        - args:
      #            - -c
      #            - nsenter --mount=/proc/1/ns/mnt -- sh -c 'sysctl -w net.nf_conntrack_max=500000'
      #          command:
      #            - /bin/sh
      #          image: busybox:latest
      #          imagePullPolicy: Always
      #          name: dependency-install
      #          resources: {}
      #          securityContext:
      #            privileged: true
      nodeSelector:
        scenario: highcount
      restartPolicy: Always
      securityContext: {}
